Remove existing content

--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>WiseYnabImporter</title>
-  <base href="https://lptr.github.io/wise-to-ynab-csv/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.7dfd27573acf6064e3e9.css"></head>
-<body class="mat-typography mat-app-background">
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.d61fd5f3d3b5f7291c96.js"></script><script type="text/javascript" src="main.ea203a82c3f96b4ac9bd.js"></script></body>
+<!DOCTYPE html>
+<html lang="en">
+    <body>
+        <h1>Use the other one!</h1>
+        <a href="https://lptr.github.io/bank-importer-to-ynab/">--> The other one.</a>
+    </body>
 </html>
